--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "koa-static": "^4.0.1",
     "pg": "^7.1.2",
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
