--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Soulike/WebChatRoom#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "blueimp-md5": "^2.8.0",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
@@ -24,7 +25,8 @@
     "koa-route": "^3.2.0",
     "koa-socket": "^4.4.0",
     "koa-static": "^4.0.1",
-    "pg": "^7.1.2",
+    "pg": "^7.2.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
